[gd_scene format=3 uid="uid://ciear0ytkbwio"]

[ext_resource type="Script" uid="uid://cyuwvs84fb15g" path="res://scripts/new_pause_menu.gd" id="1_q6hwn"]
[ext_resource type="FontFile" uid="uid://c3u22sjiv2aq1" path="res://assets/Fonts/tiny5.regular.ttf" id="2_iqh86"]
[ext_resource type="Texture2D" uid="uid://b67sx7nfisqsc" path="res://assets/gui/ResumeButtons.png" id="2_q6hwn"]
[ext_resource type="Texture2D" uid="uid://cyxjvr67bpwr7" path="res://assets/gui/ResumeButtonsPressed.png" id="3_bt32o"]
[ext_resource type="Texture2D" uid="uid://3x4rmacnx4wv" path="res://assets/gui/Restart_btn.png" id="3_q6hwn"]
[ext_resource type="Texture2D" uid="uid://clpwrba02h4s" path="res://assets/gui/Restart_btn_pressed.png" id="4_bt32o"]
[ext_resource type="Texture2D" uid="uid://codvfkaq7i8hl" path="res://assets/gui/Menu_btn.png" id="5_vvilx"]
[ext_resource type="Texture2D" uid="uid://i2oyuefflc1w" path="res://assets/gui/Menu_btn_pressed.png" id="6_r11ad"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcvlw"]
bg_color = Color(0, 0, 0, 0.24313726)

[node name="new_pause_menu" type="CanvasLayer" unique_id=683532927]
process_mode = 3
script = ExtResource("1_q6hwn")

[node name="Control" type="Control" parent="." unique_id=967307418]
layout_mode = 3
anchors_preset = 0
offset_left = 335.0
offset_top = 179.0
offset_right = 806.0
offset_bottom = 410.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="Control" unique_id=762603459]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vcvlw")

[node name="MenuContainer" type="VBoxContainer" parent="Control" unique_id=1268882512]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -42.5
offset_right = 196.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Control/MenuContainer" unique_id=1494021614]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iqh86")
theme_override_font_sizes/font_size = 84
text = "PAUSE"
horizontal_alignment = 1

[node name="ButtonsRow" type="HBoxContainer" parent="Control/MenuContainer" unique_id=533327589]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="resumeBtn" type="TextureButton" parent="Control/MenuContainer/ButtonsRow" unique_id=1700585164]
custom_minimum_size = Vector2(80, 65)
layout_mode = 2
texture_normal = ExtResource("2_q6hwn")
texture_pressed = ExtResource("3_bt32o")
ignore_texture_size = true
stretch_mode = 0

[node name="tryAgainBtn" type="TextureButton" parent="Control/MenuContainer/ButtonsRow" unique_id=66632405]
custom_minimum_size = Vector2(80, 65)
layout_mode = 2
texture_normal = ExtResource("3_q6hwn")
texture_pressed = ExtResource("4_bt32o")
ignore_texture_size = true
stretch_mode = 0

[node name="quitBTn" type="TextureButton" parent="Control/MenuContainer/ButtonsRow" unique_id=938330436]
process_mode = 3
custom_minimum_size = Vector2(80, 65)
layout_mode = 2
texture_normal = ExtResource("5_vvilx")
texture_pressed = ExtResource("6_r11ad")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Control/MenuContainer/ButtonsRow/resumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="Control/MenuContainer/ButtonsRow/tryAgainBtn" to="." method="_on_try_again_btn_pressed"]
[connection signal="pressed" from="Control/MenuContainer/ButtonsRow/quitBTn" to="." method="_on_quit_b_tn_pressed"]
